--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <!-- Header container  -->
-    <header>
+    <header class="headercontainer">
       <div class="logo">
         <img src="../resources/images/cozy-logo.png">
       </div>
@@ -19,5 +19,16 @@
       </nav>
     </header>
 
+    <div class="content">
+
+    <!-- Mission statement -->
+      <div class="mission-statement">
+        <div class="mission-text">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
