--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
   </head>
 
   <body>
-    <!-- Header container  -->
+    <!-- HEADER Container  -->
     <header class="headercontainer">
       <div class="logo">
         <img src="../resources/images/cozy-logo.png">
@@ -19,13 +19,43 @@
       </nav>
     </header>
 
+    <!-- CONTENT Container-->
+
     <div class="content">
 
     <!-- Mission statement -->
-      <div class="mission-statement">
+      <div id="mission-statement">
         <div class="mission-text">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
+      </div>
+
+    <!-- Tea of the Month-->
+      <div id="tea-store">
+          <h2>Tea of the Month</h2>
+          <h4 id="tea-byline">What's Steeping at The Tea Cozy?</h4>
+        <div id="tea-images">
+          <div class="tea">
+            <img src="../resources/images/img-berryblitz.jpg">
+            <span>Fall Berry Blitz Tea</span>
+          </div>
+          <div class="tea">
+            <img src="../resources/images/img-spiced-rum.jpg">
+            <span>Spiced Rum Tea</span>
+          </div>
+          <div class="tea">
+            <img src="../resources/images/img-donut.jpg">
+            <span>Seasonal Donuts</span>
+          </div>
+          <div class="tea">
+            <img src="../resources/images/img-myrtle-ave.jpg">
+            <span>Myrtle Ave Tea</span>
+          </div>
+          <div class="tea">
+            <img src="../resources/images/img-bedford-bizarre.jpg">
+            <span>Bedford Bizarre Tea</span>
+          </div>
         </div>
       </div>
 
