Added locations section html, css, flexbox styling.

--- a/html/index.html
+++ b/html/index.html
@@ -59,6 +59,26 @@
         </div>
       </div>
 
+      <!-- Locations -->
+      <div id="locations">
+        <h2>Locations</h2>
+        <div id="locationcontainer">
+          <div class="location">
+            <h3>Downtown</h3>
+            <span>384 West 4th St <br><br> Suite 108 <br><br>
+              Portland, Maine</span>
+          </div>
+          <div class="location">
+            <h3>East Bayside</h3>
+            <span>3433 Phisherman's Avenue <br><br> (Northwest Corner) <br><br> Portland, Maine</span>
+          </div>
+          <div class="location">
+            <h3>Oakdale</h3>
+            <span>515 Crescent Avenue <br><br> Second Floor<br><br>Portland, Maine</span>
+          </div>
+        </div>
+      </div>
+
     </div>
   </body>
 </html>
