--- a/html/index.html
+++ b/html/index.html
@@ -79,6 +79,19 @@
         </div>
       </div>
 
+      <!-- Footer -->
+      <footer>
+        <div class="footer">
+          <h2>The Tea Cozy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+        </div>
+      </footer>
+
+      <!-- Copyright -->
+      <div class="copyright">
+        <span>© The Tea Cozy 2017</span>
+      </div>
     </div>
   </body>
 </html>
