--- a/html/index.html
+++ b/html/index.html
@@ -13,9 +13,9 @@
         <img src="../resources/images/cozy-logo.png">
       </div>
       <nav>
-      	<span><a href="#">Mission</a></span>
-      	<span><a href="#">Featured Tea</a></span>
-      	<span><a href="#">Locations</a></span>
+      	<span><a href="#mission-statement">Mission</a></span>
+      	<span><a href="#tea-store">Featured Tea</a></span>
+      	<span><a href="#locations">Locations</a></span>
       </nav>
     </header>
 
